Responsive map claim

--- a/app/views/home/_counters.html.erb
+++ b/app/views/home/_counters.html.erb
@@ -1,18 +1,18 @@
 <div class="c-counters">
   <div class="wrapper">
     <div class="row">
-      <div class="column small-4">
+      <div class="column small-12 medium-4">
         <h3>Projects</h3>
         <span class="amount"><%= @projects_total %></span>
       </div>
-      <div class="column small-4">
+      <div class="column small-12 medium-4">
         <h3>Events</h3>
         <span class="amount"><%= @events_total %></span>
       </div>
-      <div class="column small-4">
+      <div class="column small-12 medium-4">
         <h3>People</h3>
         <span class="amount"><%= @people_total %></span>
       </div>
-    </div>    
+    </div>
   </div>
 </div>
