Join the network mobile menu

--- a/app/assets/stylesheets/components/_claim.scss
+++ b/app/assets/stylesheets/components/_claim.scss
@@ -5,7 +5,7 @@
   background-color: $primary-color;
 
   @media #{$mq-small} {
-    padding: $box-space;
+    padding: $base-space * 2;
   }
 
   &.-primary {
