--- a/app/assets/stylesheets/components/_media.scss
+++ b/app/assets/stylesheets/components/_media.scss
@@ -1,6 +1,10 @@
 .c-media {
-  margin: $box-space 0;
+  margin: $base-space 0;
   text-align: center;
+
+  @media #{$mq-small} {
+    margin: $box-space 0;
+  }
 
   .thumbnail img {
     display: block;
