--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -3,7 +3,7 @@
 <header class="l-intro">
   <div class="wrapper">
     <div class="row">
-      <div class="column small-9">
+      <div class="column small-12 medium-9">
         <h1>About GCPM 2.0</h1>
         <p>The Global Cancer Project Map (GCPM) is an interactive online tool and public resource for the global cancer community. Its purpose is to help visitors initiate partnerships, make informed decisions, and develop collaborations in cancer control.</p>
       </div>
@@ -14,7 +14,7 @@
 <article class="l-content">
   <div class="wrapper">
     <div class="row">
-      <div class="column small-9">
+      <div class="column small-12 medium-9">
         <h2>What a user can do through the GCPM</h2>
       </div>
     </div>
@@ -66,7 +66,7 @@
 <article class="l-content">
   <div class="wrapper">
     <div class="row">
-      <div class="column small-9">
+      <div class="column small-12 medium-9">
         <p>For more suggestions on how to get started using the GCPM, see the <a href="#">FAQ</a>.</p>
         <p>If you would like to contribute to the Global Cancer Project Map, or provide feedback to the management team, we can be reached at <a href="mailto:data@globalonc.org">data@globalonc.org</a>.</p>
         <h2>Acknowledgments</h2>
