General search spinner

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -15,7 +15,13 @@
             <div class="form-row">
               <div class="row">
                 <div class="column small-12 medium-4">
-                  <div id="search-type" class="c-select"></div>
+                  <div id="search-type" class="c-select">
+                     <div class="c-spinner -start">
+                      <div class="spinner-box">
+                        <div class="icon"></div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
