--- a/app/views/contact_forms/new.html.erb
+++ b/app/views/contact_forms/new.html.erb
@@ -3,7 +3,7 @@
   <h1>Contact</h1>
 </div>
 
-<div class="c-card-overlapped wrapper">
+<div class="c-card-overlapped">
   <div class="overlapped-content wrapper">
     <h2 class="-underlined">Send us a Message</h2>
 
