--- a/app/assets/stylesheets/components/_card_overlapped.scss
+++ b/app/assets/stylesheets/components/_card_overlapped.scss
@@ -2,19 +2,37 @@
 .c-card-overlapped {
   position: relative;
   width: 100%;
-  top: -$box-space;
+
+  @media #{$mq-small} {
+    top: -$box-space;
+    padding: 0 $box-space;
+  }
 
   .overlapped-content {
-    padding: $box-space;
+    padding-top: $base-space;
+    padding-bottom: $base-space;
     background-color: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, .1);
 
+    @media #{$mq-small} {
+      padding-top: $box-space;
+      padding-bottom: $box-space;
+    }
+
     h2 {
-      margin-bottom: $box-space;
+      margin-bottom: $base-space;
+
+      @media #{$mq-small} {
+        margin-bottom: $box-space;
+      }
     }
 
     .column {
-      margin-bottom: $box-space;
+      margin-bottom: $base-space;
+
+      @media #{$mq-small} {
+        margin-bottom: $box-space;
+      }
     }
 
     .form-group {
