--- a/app/assets/stylesheets/layouts/_app.scss
+++ b/app/assets/stylesheets/layouts/_app.scss
@@ -120,11 +120,20 @@
   flex: 1;
   z-index: 0;
   background-color: $secondary-color;
-  padding-top: $box-space;
-  padding-bottom: $box-space*2;
+  padding-top: $base-space*2;
+  padding-bottom: $base-space*2;
+
+  @media #{$mq-small} {
+    padding-top: $box-space;
+    padding-bottom: $box-space*2;
+  }
 
   h1 {
-    font-size: $large-font-size;
+    font-size: $big-font-size + 10px;
     color: $inverse-font-color;
+
+    @media #{$mq-small} {
+      font-size: $large-font-size;
+    }
   }
 }
