--- a/app/assets/stylesheets/components/_tabnav.scss
+++ b/app/assets/stylesheets/components/_tabnav.scss
@@ -3,8 +3,48 @@
   margin: 0;
   padding: 0;
   list-style: none;
-
+  overflow: auto;
   z-index: 1;
+
+  @media #{$mq-small} {
+    overflow: hidden;
+  }
+
+  &.-primary {
+    &:after {
+      background: linear-gradient(left, transparent, $primary-color);
+    }
+  }
+
+  &:after {
+    content: '';
+    position: absolute;
+    right: $small-box-space;
+    top: 0;
+    width: 22px;
+    height: 100%;
+    z-index: 2;
+    background: linear-gradient(left, transparent, $secondary-color);
+
+    @media #{$mq-small} {
+      display: none;
+    }
+  }
+
+  &:before {
+    content: '';
+    position: absolute;
+    left: $small-box-space;
+    top: 0;
+    width: 18px;
+    height: 100%;
+    z-index: 2;
+    background: linear-gradient(right, transparent, $secondary-color);
+
+    @media #{$mq-small} {
+      display: none;
+    }
+  }
 
   .tabnav-item {
     position: relative;
@@ -12,21 +52,21 @@
     font-weight: bold;
     font-size: 14px;
     text-align: center;
-    flex-grow: 1;
 
     @media #{$mq-small} {
-      flex-grow: inherit;
       font-size: $medium-font-size;
     }
 
     a {
       display: block;
       position: relative;
-      padding: 10px 5px;
-
+      padding: 8px $inline-space;
+      margin: 4px;
       color: $inverse-font-color;
 
       @media #{$mq-small} {
+        padding: 10px $inline-space;
+        margin: 0;
         min-width: 130px;
       }
 
