--- a/app/views/map/_mobile_index.html.erb
+++ b/app/views/map/_mobile_index.html.erb
@@ -36,7 +36,7 @@
     <div class="wrapper">
       <div class="row collapse">
         <div class="column small-12">
-          <ul class="c-tabnav" id="dataTabNav">
+          <ul class="c-tabnav -primary" id="dataTabNav">
              <% @filters.each do |filter| %>
               <li class="tabnav-item">
                 <%= link_to t(filter),
