--- a/app/views/map/_desktop_index.html.erb
+++ b/app/views/map/_desktop_index.html.erb
@@ -15,7 +15,7 @@
   <div class="l-app-navbar">
     <div class="wrapper">
       <div class="row collapse">
-        <div class="column small-6">
+        <div class="column small-12 medium-6">
           <ul class="c-tabnav" id="dataTabNav">
              <% @filters.each do |filter| %>
               <li class="tabnav-item">
@@ -29,7 +29,7 @@
             <% end %>
           </ul>
         </div>
-        <div class="column small-6">
+        <div class="column small-12 medium-6">
           <div id="toolbar"></div>
         </div>
       </div>
