--- a/app/assets/javascripts/templates/follow.hbs
+++ b/app/assets/javascripts/templates/follow.hbs
@@ -1,11 +1,11 @@
 {{#if mobile}}
   {{#if followed}}
     <svg class="c-icon -normal -secondary">
-      <use xlink:href="#icon-minus"></use>
+      <use xlink:href="#icon-user-minus"></use>
     </svg>
   {{else}}
     <svg class="c-icon -normal -secondary">
-      <use xlink:href="#icon-collaborators"></use>
+      <use xlink:href="#icon-user-plus"></use>
     </svg>
   {{/if}}
 {{else}}
