--- a/app/assets/stylesheets/components/_mobile-btns-container.scss
+++ b/app/assets/stylesheets/components/_mobile-btns-container.scss
@@ -26,4 +26,10 @@
     height: 44px;
     margin-bottom: 5px;
   }
+
+  a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
