Show network on investigator fix

--- a/app/views/users/_network.html.erb
+++ b/app/views/users/_network.html.erb
@@ -1,6 +1,6 @@
 
 <% if browser.device.mobile? %>
-  <%= render "mobile_network" %>
+  <%= render "users/mobile_network" %>
 <% else %>
-  <%= render "desktop_network" %>
+  <%= render "users/desktop_network" %>
 <% end %>
