Forms titles margin

--- a/app/assets/stylesheets/components/_project-form.scss
+++ b/app/assets/stylesheets/components/_project-form.scss
@@ -10,6 +10,7 @@
   & h3.c-title{
     text-transform: none;
     color: #000;
+    margin-top: 20px;
     margin-bottom: 0;
     font-size: 25px;
 
