Avatars asset image

--- a/app/views/investigators/_desktop_show_intro.html.erb
+++ b/app/views/investigators/_desktop_show_intro.html.erb
@@ -11,7 +11,7 @@
       <div class="column small-12 medium-8">
         <div class="c-avatar -big -ph -mg-bt"
              style="<% if inv_user.present? %>
-                      background-image: url(<%= inv_user.avatar_url(:thumb) %>)
+                      background-image: asset-url(<%= inv_user.avatar_url(:thumb) %>)
                     <% end %>">
         </div>
       </div>
