--- a/app/views/investigators/_net_list.html.erb
+++ b/app/views/investigators/_net_list.html.erb
@@ -6,7 +6,7 @@
           <div class="icons">
             <div class="c-avatar -ph<% !browser.device.mobile? ? ' -medium -mg-bt' : ' -normal' %>"
                  style="<% if e.user.present? %>
-                          background-image: url(<%= e.user.avatar_url(:thumb) %>)
+                          background-image: asset-url(<%= e.user.avatar_url(:thumb) %>)
                         <% end %>">
             </div>
             <% if e.user.present? && is_owner?(@user, current_user) && browser.device.mobile? %>
