--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -37,6 +37,9 @@
                 download: 'user-manual', title: t('user-manual')
               %>
             </li>
+            <li class="c-translate">
+              <%= link_to 'FAQ', faqs_path %>
+            </li>
           </ul>
           <ul>
             <%= render "shared/nav" %>
