--- a/app/views/shared/_footer_mobile.html.erb
+++ b/app/views/shared/_footer_mobile.html.erb
@@ -46,6 +46,11 @@
             %>
         </div>
       </div>
+      <div class="row collapse">
+        <div class="column small-6">
+          <%= link_to 'FAQ', faqs_path %>
+        </div>
+      </div>
     </div>
 
     <div class="list">
