Map: remove investigations from counters

--- a/app/views/map/_counters.html.erb
+++ b/app/views/map/_counters.html.erb
@@ -3,25 +3,17 @@
     <div class="row">
 
       <% if @current_type == 'projects' %>
-
-        <% gridSize = params.key?('countries') ? 3 : 4 %>
-        <% if params.key?('countries') %>
-          <div class="column small-12 medium-<%= gridSize %>">
-            <h3>Investigations</h3>
-            <span class="amount"><%= @investigations %></span>
-          </div>
-        <% end %>
-        <div class="column small-12 medium-<%= gridSize %>">
+        <div class="column small-12 medium-4">
           <h3>
             <%= t @current_type %>
           </h3>
           <span class="amount"><%= @items_total %></span>
         </div>
-        <div class="column small-12 medium-<%= gridSize %>">
+        <div class="column small-12 medium-4">
           <h3>Project leads</h3>
           <span class="amount"><%= @project_leads %></span>
         </div>
-        <div class="column small-12 medium-<%= gridSize %>">
+        <div class="column small-12 medium-4">
           <h3>Collaborators</h3>
           <span class="amount"><%= @collaborators %></span>
         </div>
