--- a/app/views/cancer_types/show.html.erb
+++ b/app/views/cancer_types/show.html.erb
@@ -30,5 +30,11 @@
 </section>
 
 <div class="l-grid" id="content">
-  <%= render 'projects/list', items: @items, more: @more %>
+  <% if @current_type == 'projects' %>
+    <%= render 'projects/list', items: @items, more: @more %>
+  <% elsif @current_type == 'data' %>
+    <%= render 'data/cancer_types'%>
+  <% else @current_type %>
+    <%= render 'investigators/list', items: @items, more: @more %>
+  <% end %>
 </div>
