Add featured pictures

--- a/app/views/home/_list.html.erb
+++ b/app/views/home/_list.html.erb
@@ -70,6 +70,12 @@
             </div>
           </div>
 
+        <% when 'picture' %>
+          <div class="column small-12 medium-4">
+            <div class="">  <!-- use -inverse if you want to fill the card -->
+              <%= image_tag featured.image_url(:home) %>
+            </div>
+          </div>
       <% end %>
     <% end %>
   <% end %>
