Fixes for class

--- a/app/views/home/_list.html.erb
+++ b/app/views/home/_list.html.erb
@@ -72,7 +72,7 @@
 
         <% when 'picture' %>
           <div class="column small-12 medium-4">
-            <div class="">  <!-- use -inverse if you want to fill the card -->
+            <div class="-inverse">  <!-- use -inverse if you want to fill the card -->
               <%= image_tag featured.image_url(:home) %>
             </div>
           </div>
