Changes for picture formats

--- a/app/views/home/_list.html.erb
+++ b/app/views/home/_list.html.erb
@@ -73,7 +73,7 @@
         <% when 'picture' %>
           <div class="column small-12 medium-4">
             <div class="-inverse">  <!-- use -inverse if you want to fill the card -->
-              <%= image_tag featured.image_url(:home) %>
+              <%= image_tag featured.image_url(:square) %>
             </div>
           </div>
       <% end %>
