--- a/app/views/users/_desktop_show_intro.html.erb
+++ b/app/views/users/_desktop_show_intro.html.erb
@@ -10,7 +10,7 @@
     <div class="row collapse">
       <div class="column small-8">
         <div class="c-avatar -big -mg-bt"
-             style="background-image: asset-url(<%= user.avatar_url(:thumb) %>)">
+             style="background-image: url(<%= user.avatar_url(:thumb) %>)">
         </div>
       </div>
     </div>
