--- a/app/views/users/_mobile_show_intro.html.erb
+++ b/app/views/users/_mobile_show_intro.html.erb
@@ -7,7 +7,7 @@
     <div class="row collapse">
       <div class="column small-12 medium-8">
         <div class="c-avatar -medium -ph -mg-bt -align-center"
-             style="background-image: asset-url(<%= user.avatar_url(:thumb) %>)">
+             style="background-image: url(<%= user.avatar_url(:thumb) %>)">
         </div>
       </div>
     </div>
