--- a/app/views/home/_list.html.erb
+++ b/app/views/home/_list.html.erb
@@ -56,7 +56,7 @@
               <div class="icons">
                 <div class="c-avatar -ph -mg-bt"
                      style="<% if featured.user.present? %>
-                              background-image: asset-url(<%= featured.user.avatar_url(:thumb) %>)
+                              background-image: url(<%= featured.user.avatar_url(:thumb) %>)
                             <% end %>">
                 </div>
               </div>
