Posts: form created

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -14,6 +14,8 @@
       <p class="error">* Required field missing.</p>
     <% end %>
 
+    <div id="postForm"></div>
+
     <div class="form-row">
       <%= f.button :submit, "Submit", class: 'c-btn -primary' %>
 
