Posts: form created

--- a/app/assets/javascripts/templates/post_form.hbs
+++ b/app/assets/javascripts/templates/post_form.hbs
@@ -1,5 +1,8 @@
 <div class="c-grid">
   <div class="form-row">
+    <h3>Relations</h3>
+  </div>
+  <div class="form-row">
     <div class="row">
       <div class="column small-12 medium-6">
         <div id="countries" class="c-select"></div>
